# xafile

./: .gitignore  README.MD  meson.build
data/: style.css  xafile.gresource.xml
src/: application.cpp  application.hpp  content_view.cpp  content_view.hpp  main.cpp  sidebar.cpp  sidebar.hpp  window.cpp  window.hpp
src/utility/: utilitas.hpp
